--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
         placeholder="Your text here"
       /><br /><br />
 
-      <label for="file">Upload Image to generate Depth map</label><br />
+      <label for="file">Upload Image to use as repeating pattern</label><br />
       <input type="file" id="file" name="file" /><br /><br />
 
       <button type="submit">Generate Stereogram</button>
